# tnyosc

./: .gitignore  CMakeLists.txt
include/: tnyosc-dispatch.hpp
